// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostSummary component renders correctly 1`] = `
<div
  className="article-container"
>
  <a
    href="/posts/posts-1"
    title="Post 1"
  >
    <div
      className="header-container"
    >
      <p
        className="category"
      >
        category 1
      </p>
      <p
        className="date"
      >
        January 2, 2019
      </p>
    </div>
    <div
      className="image-container"
      style={
        Object {
          "backgroundImage": "url(http://post-1.img)",
        }
      }
    />
    <div
      className="article"
    >
      <h2>
        Post 1
      </h2>
      <p>
        Post 1 summary
      </p>
    </div>
  </a>
</div>
`;

exports[`PostSummary component renders correctly with the default image 1`] = `
<div
  className="article-container"
>
  <a
    href="/posts/posts-1"
    title="Post 1"
  >
    <div
      className="header-container"
    >
      <p
        className="category"
      >
        category 1
      </p>
      <p
        className="date"
      >
        January 2, 2019
      </p>
    </div>
    <div
      className="image-container"
      style={
        Object {
          "backgroundImage": "url(http://default.img)",
        }
      }
    />
    <div
      className="article"
    >
      <h2>
        Post 1
      </h2>
      <p>
        Post 1 summary
      </p>
    </div>
  </a>
</div>
`;
